@@ -5,7 +5,7 @@
 #  the Free Software Foundation; either version 2 of the License, or
 #  (at your option) any later version.
 #
-# See systemd-logind.conf(5) for details
+# See logind.conf(5) for details
 
 [Login]
 #NAutoVTs=6
